syntax = "proto3";

package pbsyncer;

import "proto/pbtypes/block.proto";

message BlockRequest {
  int64 height = 1;
}

message BlockResponse {
  pbtypes.Block block = 1;
}

message NoBlockResponse {
  int64 height = 1;
}

message StatusRequest {}

message StatusResponse {
  int64 height = 1;
}

message Message {
  oneof sum {
    BlockRequest block_request = 1;
    BlockResponse block_response = 2;
    NoBlockResponse no_block_response = 3;
    StatusRequest status_request = 4;
    StatusResponse status_response = 5;
  }
}